--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "bootstrap": "^4.5.0",
     "next": "9.4.4",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-icons": "^3.10.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
@@ -23,6 +24,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.0.1",
+    "node-sass": "^4.14.1",
+    "styled-jsx-plugin-sass": "^1.0.0"
   }
 }
