--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
+    "date-fns": "^2.15.0",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
