--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-icons": "^3.10.0"
+    "react-icons": "^3.10.0",
+    "react-scroll": "^1.8.0",
+    "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
