--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.2.2",
     "bootstrap": "^4.5.0",
     "date-fns": "^2.15.0",
     "next": "9.4.4",
@@ -15,7 +16,8 @@
     "react-dom": "16.13.1",
     "react-icons": "^3.10.0",
     "react-scroll": "^1.8.0",
-    "react-transition-group": "^4.4.1"
+    "react-transition-group": "^4.4.1",
+    "yup": "^0.29.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
