--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@sendgrid/mail": "^7.2.2",
     "bootstrap": "^4.5.0",
     "date-fns": "^2.15.0",
+    "mailgun-js": "^0.22.0",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
