--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,17 @@
 {
-  "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": 2021,
+    "sourceType": "module"
+  },
   "env": {
     "browser": true,
     "es6": true,
     "node": true
   },
-  "extends": ["standard", "standard-react"],
+  "extends": ["standard", "standard-react", "plugin:react/recommended"],
   "plugins": ["react-hooks"],
   "rules": {
     "react/react-in-jsx-scope": "off",
