--- a/package.json
+++ b/package.json
@@ -5,33 +5,35 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint . --ext js,jsx",
+    "lint:fix": "eslint . --ext js,jsx --fix"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.2.2",
-    "bootstrap": "^4.5.0",
-    "date-fns": "^2.15.0",
+    "@sendgrid/mail": "^7.4.2",
+    "bootstrap": "^4.6.0",
+    "date-fns": "^2.19.0",
     "mailgun-js": "^0.22.0",
-    "next": "9.4.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-icons": "^3.10.0",
-    "react-scroll": "^1.8.0",
+    "next": "10.1.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "react-scroll": "^1.8.2",
     "react-transition-group": "^4.4.1",
-    "yup": "^0.29.2"
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.5.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-config-standard-react": "^9.2.0",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint": "^7.23.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-config-standard-react": "^11.0.1",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.8",
-    "eslint-plugin-standard": "^4.0.1",
-    "node-sass": "^4.14.1",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-standard": "^5.0.0",
+    "node-sass": "^5.0.0",
     "styled-jsx-plugin-sass": "^1.0.0"
   }
 }
