--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "bootstrap": "^4.6.0",
     "date-fns": "^2.25.0",
     "mailgun-js": "^0.22.0",
-    "next": "11.1.2",
+    "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
@@ -28,15 +28,14 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/react": "^17.0.32",
+    "@types/node": "16.11.6",
+    "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
-    "eslint": "^8.1.0",
-    "eslint-config-next": "^11.1.2",
+    "eslint": "7",
+    "eslint-config-next": "^12.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "node-sass": "^6.0.1",
     "prettier": "^2.4.1",
-    "styled-jsx-plugin-sass": "^1.0.0",
     "typescript": "^4.4.4"
   }
 }
