--- a/package.json
+++ b/package.json
@@ -18,21 +18,19 @@
     "bootstrap": "^4.6.0",
     "date-fns": "^2.24.0",
     "mailgun-js": "^0.22.0",
-    "next": "11.1.2",
+    "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0",
+    "react-icons": "^4.3.1",
     "react-scroll": "^1.8.4",
     "react-transition-group": "^4.4.2",
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-config-next": "^11.1.2",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^8.11.0",
+    "eslint-config-next": "^12.1.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "node-sass": "^6.0.1",
-    "prettier": "^2.4.1",
-    "styled-jsx-plugin-sass": "^1.0.0"
+    "prettier": "^2.5.1"
   }
 }
