--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@upstash/qstash": "0.3.1",
+    "@vercel/og": "0.0.21",
     "clsx": "1.2.1",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
