--- a/package.json
+++ b/package.json
@@ -1,49 +1,50 @@
 {
-  "name": "psicoterapia-adicciones",
+  "name": "diplomadopsicoterapia.cl",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "format": "prettier --check .",
-    "format:fix": "prettier --write .",
     "generate": "dotenv -e .env.local -- pnpm prisma generate",
     "db:push": "dotenv -e .env.local -- pnpm prisma db push",
     "db:pull": "dotenv -e .env.local -- pnpm prisma db pull"
   },
   "dependencies": {
-    "@headlessui/react": "1.7.16",
-    "@prisma/client": "5.0.0",
-    "@radix-ui/react-dropdown-menu": "2.0.5",
-    "@tailwindcss/forms": "0.5.4",
-    "@types/node": "20.4.5",
-    "@types/react": "18.2.17",
-    "@types/react-dom": "18.2.7",
-    "@upstash/qstash": "0.3.6",
-    "@vercel/og": "0.5.9",
+    "@next/third-parties": "14.0.3",
+    "@prisma/client": "5.6.0",
+    "@radix-ui/react-dialog": "1.0.5",
+    "@radix-ui/react-dropdown-menu": "2.0.6",
+    "@radix-ui/react-icons": "1.3.0",
+    "@tailwindcss/forms": "0.5.7",
     "clsx": "2.0.0",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
-    "next": "13.4.12",
-    "next-recaptcha-v3": "1.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "4.10.1",
+    "next": "14.0.3",
+    "next-recaptcha-v3": "1.3.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-icons": "4.12.0",
+    "tailwind-merge": "2.1.0",
+    "tailwindcss-animate": "1.0.7",
     "tailwindcss-radix": "2.8.0",
-    "typescript": "4.9.4",
-    "zod": "3.21.4"
+    "valibot": "0.22.0"
   },
   "devDependencies": {
-    "autoprefixer": "10.4.14",
-    "dotenv-cli": "7.2.1",
-    "eslint-config-prettier": "8.9.0",
-    "postcss": "8.4.27",
-    "prettier": "3.0.0",
-    "prettier-plugin-tailwindcss": "0.4.1",
-    "prisma": "5.0.0",
-    "tailwindcss": "3.3.3"
+    "@trivago/prettier-plugin-sort-imports": "4.3.0",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "dotenv-cli": "7.3.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.3",
+    "eslint-config-prettier": "9.1.0",
+    "postcss": "^8",
+    "prettier": "3.1.0",
+    "prettier-plugin-packagejson": "2.4.7",
+    "prettier-plugin-tailwindcss": "0.5.8",
+    "prisma": "5.6.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
