--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "generate": "dotenv -e .env.local -- pnpm prisma generate",
     "db:push": "dotenv -e .env.local -- pnpm prisma db push",
-    "db:pull": "dotenv -e .env.local -- pnpm prisma db pull"
+    "db:pull": "dotenv -e .env.local -- pnpm prisma db pull",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@next/third-parties": "14.0.3",
