--- a/package.json
+++ b/package.json
@@ -13,39 +13,40 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@next/third-parties": "14.0.3",
+    "@next/third-parties": "14.1.0",
     "@prisma/client": "5.6.0",
     "@radix-ui/react-dialog": "1.0.5",
     "@radix-ui/react-dropdown-menu": "2.0.6",
     "@radix-ui/react-icons": "1.3.0",
+    "@radix-ui/react-tabs": "1.0.4",
     "@tailwindcss/forms": "0.5.7",
-    "clsx": "2.0.0",
-    "next": "14.0.3",
+    "clsx": "2.1.0",
+    "next": "14.1.0",
     "next-recaptcha-v3": "1.3.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "4.12.0",
-    "tailwind-merge": "2.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "5.0.1",
+    "tailwind-merge": "2.2.1",
     "tailwindcss-animate": "1.0.7",
     "tailwindcss-radix": "2.8.0",
-    "valibot": "0.22.0"
+    "valibot": "0.28.1"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "4.3.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "@types/node": "^20.11.17",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.17",
     "dotenv-cli": "7.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "9.1.0",
-    "postcss": "^8",
-    "prettier": "3.1.0",
-    "prettier-plugin-packagejson": "2.4.7",
-    "prettier-plugin-tailwindcss": "0.5.8",
+    "postcss": "^8.4.35",
+    "prettier": "3.2.5",
+    "prettier-plugin-packagejson": "2.4.10",
+    "prettier-plugin-tailwindcss": "0.5.11",
     "prisma": "5.6.0",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
