--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-label": "2.1.0",
     "@radix-ui/react-tabs": "1.1.1",
     "@tailwindcss/forms": "0.5.9",
+    "@tailwindcss/typography": "0.5.15",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "lucide-react": "0.460.0",
